add role student and configue StudentAPIController
