# app/Http/Controllers/API/RolePermissionAPIController.php
@@ -17,6 +17,45 @@ class RolePermissionAPIController extends Controller
         $this->userRepository = $userRepo;
     }
 
+
+
+    /**
+     * @return Response
+     *
+     * @SWG\Post(
+     *      path="/users/hasRole",
+     *      summary="User Has Role",
+     *      tags={"User"},
+     *      description="specify the authenticated has requested role or not",
+     *      produces={"application/json"},
+     *      @SWG\Parameter(
+     *          name="role",
+     *          description="role to check",
+     *          required=false,
+     *          type="string",
+     *          in="path",
+     *      ),
+     *      @SWG\Response(
+     *          response=200,
+     *          description="successful operation",
+     *          @SWG\Schema(
+     *              type="object",
+     *              @SWG\Property(
+     *                  property="success",
+     *                  type="boolean"
+     *              ),
+     *              @SWG\Property(
+     *                  property="result",
+     *                  property="true",
+     *              ),
+     *              @SWG\Property(
+     *                  property="message",
+     *                  type="string"
+     *              )
+     *          )
+     *      )
+     * )
+     */
     public function hasRole(Request $request)
     {
         /** @var User $user */
@@ -36,5 +75,48 @@ class RolePermissionAPIController extends Controller
             'status' => 'درخواست موفقیت آمیز بود.',
             'result' => $user->hasRole($input['role']),
         ]);
+    }
+
+
+    /**
+     * @return Response
+     *
+     * @SWG\Get(
+     *      path="/users/roles",
+     *      summary="Retrieve User Roles",
+     *      tags={"Student"},
+     *      description="retrieve the authenticated user roles",
+     *      produces={"application/json"},
+     *      @SWG\Response(
+     *          response=200,
+     *          description="successful operation",
+     *          @SWG\Schema(
+     *              type="object",
+     *              @SWG\Property(
+     *                  property="success",
+     *                  type="boolean"
+     *              ),
+     *              @SWG\Property(
+     *                  property="message",
+     *                  type="string"
+     *              )
+     *          )
+     *      )
+     * )
+     */
+    public function roles()
+    {
+        /** @var User $user */
+        $user = $this->userRepository->findWithoutFail(auth('api')->user()->id);
+
+        if (empty($user)) {
+            return $this->sendError('ابتدا به سامانه وارد شوید');
+        }
+
+        return response()->json([
+            'status' => 'درخواست موفقیت آمیز بود.',
+            'result' => $user->roles(),
+        ]);
+
     }
 }
